--- a/fac.html
+++ b/fac.html
@@ -109,6 +109,105 @@
         </p>
         <img class="OGBaba" src="img 2024.png" alt="" />
       </div>
+      <div class="share_1">
+        <div>
+          <button><i class="fa-solid fa-thumbs-up"></i></button>
+        </div>
+        <div>
+          <button><i class="fa-regular fa-comment"></i></button>
+        </div>
+        <div>
+          <button><i class="fa-solid fa-share"></i></button>
+        </div>
+      </div>
+      <div class="davolee">
+        <div class="cird">
+          <img class="cirpic" src="Ill codes1.jpg" alt="" />
+          <span
+            ><b>Illustrious Code</b> is with <b>Ezekiel Oluwaezra</b> and
+            <b>29 others.</b>
+          </span>
+        </div>
+        <div class="baba"></div>
+        <div class="img-dav">
+          <i class="fa-solid fa-xmark"></i>
+        </div>
+      </div>
+      <div>
+        <p class="OGBaba_text">
+          Building Spotify Frontend <a href="#Spotify">Spotify</a>
+        </p>
+        <img class="OGBaba" src="spotify.jpg" alt="" />
+      </div>
+      <div class="share_1">
+        <div>
+          <button><i class="fa-solid fa-thumbs-up"></i></button>
+        </div>
+        <div>
+          <button><i class="fa-regular fa-comment"></i></button>
+        </div>
+        <div>
+          <button><i class="fa-solid fa-share"></i></button>
+        </div>
+      </div>
+      <div class="davolee">
+        <div class="cird">
+          <img class="cirpic" src="Ill codes1.jpg" alt="" />
+          <span
+            ><b>Illustrious Code</b> is with <b>Ezekiel Oluwaezra</b> and
+            <b>29 others.</b>
+          </span>
+        </div>
+        <div class="baba"></div>
+        <div class="img-dav">
+          <i class="fa-solid fa-xmark"></i>
+        </div>
+      </div>
+      <div>
+        <p class="OGBaba_text">
+          Code i use in building the website i built for fun
+        </p>
+        <img class="OGBaba" src="b1.png" alt="" />
+      </div>
+      <div class="share_1">
+        <div>
+          <button><i class="fa-solid fa-thumbs-up"></i></button>
+        </div>
+        <div>
+          <button><i class="fa-regular fa-comment"></i></button>
+        </div>
+        <div>
+          <button><i class="fa-solid fa-share"></i></button>
+        </div>
+      </div>
+      <div class="davolee">
+        <div class="cird">
+          <img class="cirpic" src="Ill codes1.jpg" alt="" />
+          <span
+            ><b>Illustrious Code</b> is with <b>Ezekiel Oluwaezra</b> and
+            <b>29 others.</b>
+          </span>
+        </div>
+        <div class="baba"></div>
+        <div class="img-dav">
+          <i class="fa-solid fa-xmark"></i>
+        </div>
+      </div>
+      <div>
+        <p class="OGBaba_text">Put God first in all you do</p>
+        <img class="OGBaba" src="Ilc.jpg" alt="" />
+      </div>
+      <div class="share_1">
+        <div>
+          <button><i class="fa-solid fa-thumbs-up"></i></button>
+        </div>
+        <div>
+          <button><i class="fa-regular fa-comment"></i></button>
+        </div>
+        <div>
+          <button><i class="fa-solid fa-share"></i></button>
+        </div>
+      </div>
     </section_2>
   </body>
 </html>
